Salários/css/styles.css
* {
  margin: 0;
  padding: 0;
  font-family: Georgia, "Times New Roman", Times, serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}

body {
  background-color: #f4f4f9;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  color: #333;
}

.hide {
  display: none !important;
}

.container {
  min-width: 400px;
  min-height: 400px;
  background-color: #ffffff;
  padding: 2rem;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

/* Esconde os spinner controls em Webkit browsers (Chrome, Safari, Edge) */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Esconde os spinner controls no Firefox */
input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;  
}

input[type="radio"] {
  height: 20px;
  width: 20px;
}

.radio-input {
  display: flex;
}
.radio-input label {
  height:20px;
  width:auto;
  padding-right: 0.5rem;
  font-size: 1.1rem;
}
/* Formulário de cálculo de vencimento */

#calc-container h2 {
  text-align: center;
  margin-bottom: 2rem;
  color: #555;
}

.form-inputs {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.form-control {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin-bottom: 1rem;
}

.form-control label {
  font-weight: bold;
  margin-bottom: 0.6rem;
  color: #666;
}

.form-control input {
  padding: 1rem 0.5rem;
  border: 1px solid #ccc;
  border-radius: 5px;
}

#confirma-duodecimos {
  display: flex;
  justify-content: space-evenly;
  gap: 1rem;
  margin-bottom: 1rem;
}

#confirma-horas {
  display: flex;
  justify-content: space-evenly;
  gap: 1rem;
  margin-bottom: 1rem;
}

#confirma-subsidio {
  display: flex;
  justify-content: space-evenly;
  gap: 1rem;
}

.subsidioAlim {
  padding-bottom: 0.5rem;
}

.subsidioCartao {
  padding-bottom: 0.5rem;
}

.action-control {
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
  gap: 1rem;
}

button {
  text-transform: uppercase;
  padding: 1rem 1.5rem;
  background-color: #003366;
  border: none;
  color: #fff;
  cursor: pointer;
  opacity: 0.9;
  flex: 1;
  border-radius: 15px;
  transition: opacity 0.3s ease;
}

button:hover {
  opacity: 1;
}

#clear-btn, #clear-btn-pageOne, #clear-btn-pageTwo {
  background-color: #6c757d;
  color: #fff;
}

/* Table */

#result-container {
  text-align: center;
  display: flex;
  flex-direction: column;
}

#result-container h3 {
  margin-top: 1rem;
  color: #555;
}

#result-container p {
  font-weight: bold;
  padding-bottom: 1rem;
  color: #666;
}

#cabecalhos {
  border-bottom: 1px solid #ddd;
}

#result-container span {
  font-weight: normal;
}

#pay-table {
  margin: 1.5rem 0;
  font-size: 0.8rem;
}

.pay-header {
  font-weight: bold;
  color: #666;
}

.pay-header p {
  margin-bottom: 1rem;
}

.pay-header,
.pay-data {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid #ddd;
}

.pay-header h4,
.pay-data p {
  flex: 1;
}

.pay-header h4:nth-child(3),
.pay-data p:nth-child(3) {
  max-width: 80px;
}

#back-btn {
  align-self: center;
}

#back-btn-result {
  align-self: center;
}

#horas-mes input {
  margin-bottom: 1rem;
}

#page-one, #page-two, #page-three {
  padding-bottom: 1rem;
  transition: 0.5s;
}

